--- a/230306/01.html
+++ b/230306/01.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-  <div class="card" style="width: 18rem;">
+  <div class="card" style="width: 23rem;">
     <img src="./source/01.jpg" class="card-img-top" alt="...">
     <div class="card-body bg-body-tertiary">
       <h2 class="card-title fw-bold ">팀 버너스리</h2>
@@ -22,7 +22,7 @@
       <li class="list-group-item">출신대학 - 옥스퍼드 대학교 물리학 학사</li>
     </ul>
     <div class="card-body bg-body-tertiary d-flex flex-row-reverse">
-      <a href="#" class="card-link">추가 정보</a>
+      <a href="https://ko.wikipedia.org/wiki/%ED%8C%80_%EB%B2%84%EB%84%88%EC%8A%A4%EB%A6%AC" class="card-link">추가 정보</a>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
