--- a/230306/02.html
+++ b/230306/02.html
@@ -20,12 +20,12 @@
       </div>
       
       <div class="input-group mb-3">
-        <span class="input-group-text">Password</span>
+        <span class="input-group-text py-1">Password</span>
         <div class="form-floating">
           <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
           <label for="floatingPassword">Password</label>
         </div>
-      </div>      
+      </div>
   
       <div class="checkbox mb-3 d-flex justify-content-center">
         <label>
@@ -45,8 +45,7 @@
         <button type="button" class="btn btn-warning input-group mb-3 rounded-pill">돌아가기</button>
       </div>
     </form>
-  </main>
-  
+  </main>  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
